--- a/bicamp-java-web/src/main/webapp/ex04/test07.html
+++ b/bicamp-java-web/src/main/webapp/ex04/test07.html
@@ -6,10 +6,11 @@
 </head>
 <body>
 <h1>POST 요청 - 빈 값을 보내기</h1>
-<form action="s7" method="post">
+<form action="s7" method="get">
   a: <input type="text" name="a" value="aaaa"><br>
   b: <input type="text" name="b"><br>
-  a 입력 상자에는 값을 넣고, b 입력 상자에는 값을 입력하지 않고 전송해보자!<br>
+  c: <input type="checkbox" name="c"><br>
+  체크 상자 체크한 경우와 체크하지 않은 경우 확인<br>
   <input type="submit" value="전송">
 </form>
 </body>
